--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="leading-tight text-gray-900 antialiased" lang="en">
+<html class="antialiased" lang="en">
   <head>
     {% include "partials/site-head.html" %}
   </head>
@@ -11,7 +11,7 @@
   >
     {% include "partials/site-header.html" %}
 
-    <div class="py-10">{% block content %}{% endblock %}</div>
+    <div>{% block content %}{% endblock %}</div>
 
     {% include "partials/banner.html" %}
 
