--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,15 +1,32 @@
-{% layout "layouts/base.html" %} {% block content %}
-<main id="main-content" tabindex="-1">
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:px-8">
-    <h1 class="text-3xl font-bold leading-tight text-gray-900">
+{% layout "layouts/base.html" %} 
+{% block content %}
+<main x-data="init-data" id="main-content"  tabindex="-1" class="mx-auto max-w-2xl px-4 sm:px-6 lg:px-8">
+    <h1>
       {{ intro.title }}
     </h1>
-  </div>
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:px-8">
-    <div class="py-8 leading-8 text-gray-600">
-      <p class="text-xl">{{ intro.desc }}</p>
+    <h2>
+      {{ intro.subtitle }}
+    </h2>
+    <p>
+      {{ intro.desc }}
+    </p>
+        <button @click="toggle">Toggle Content</button>
+ 
+    <div x-show="open">
+        Content...
     </div>
-    <div class="prose prose-lg prose-gray text-gray-500">{{ content }}</div>
-  </div>
 </main>
+ <div class="prose prose-lg prose-gray text-gray-500">{{ content }}</div>
+ <script>
+  document.addEventListener('alpine:init', () => {
+    Alpine.data('init-data', () => ({
+        links: ['work', 'Demo spa'],
+        open: true,
+        toggle() {
+            this.open = ! this.open
+        },
+    }))
+  }) 
+</script>
 {% endblock %}
+
