--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,25 +1,23 @@
 {% layout "layouts/base.html" %} 
 {% block content %}
-<main x-data="init-data" id="main-content"  tabindex="-1" class="mx-auto max-w-2xl px-4 sm:px-6 lg:px-8">
+{% iconsprite %}
+<main x-data="initData" id="main-content"  tabindex="-1" class="mx-auto container">
     <h1>
       {{ intro.title }}
     </h1>
     <h2>
       {{ intro.subtitle }}
     </h2>
-    <p>
-      {{ intro.desc }}
-    </p>
-        <button @click="toggle">Toggle Content</button>
- 
-    <div x-show="open">
-        Content...
-    </div>
+    {% icon "wine-sharp" %}
+    <ul class="flex">
+    {% for item in navigation.headerItems %} 
+
+    {% endfor %}
+    </ul>
 </main>
- <div class="prose prose-lg prose-gray text-gray-500">{{ content }}</div>
- <script>
+<script>
   document.addEventListener('alpine:init', () => {
-    Alpine.data('init-data', () => ({
+    Alpine.data('initData', () => ({
         links: ['work', 'Demo spa'],
         open: true,
         toggle() {
@@ -30,3 +28,4 @@
 </script>
 {% endblock %}
 
+ {# <div class="prose prose-lg prose-gray text-gray-500">{{ content }}</div> #}
