formatting and cleanup

--- a/src/_includes/layouts/404.html
+++ b/src/_includes/layouts/404.html
@@ -1,16 +1,10 @@
 {% layout "layouts/plain.html" %} {% block content %}
 <main>
-  <div >
-    <h2>
-      404
-    </h2>
+  <div>
+    <h2>404</h2>
     <p>
       Take me back
-      <a
-        href="/"
-        >
-        home
-      </a>
+      <a href="/"> home </a>
     </p>
   </div>
 </main>
