--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -3,9 +3,7 @@
   <head>
     {% include "partials/site-head.html" %}
   </head>
-  <body
-    data-env="{{ node.env }}"
-  >
+  <body data-env="{{ node.env }}">
     {% include "partials/site-header.html" %}
 
     <div>{% block content %}{% endblock %}</div>
