--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -2,8 +2,8 @@
 site.name == title %} {% assign page_title = title %} {% endif %} {% assign
 site_title = site.name %} {% assign current_url = site.url | append: page.url %}
 {% unless social_image %} {% assign social_image = site.url | append:
-'assets/images/social-share.png' %} {% endunless %} {% if meta.title %} {% assign
-page_title = meta.title %} {% endif %}
+'assets/images/social-share.png' %} {% endunless %} {% if meta.title %} {%
+assign page_title = meta.title %} {% endif %}
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
