--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -136,8 +136,7 @@
     <h2><span class="hidden">{{ intro.subtitle }}</span></h2>
     <div class="bg-icons absolute top-[35%] left-2">
       <div class="flex flex-col">
-        <template x-for="(y, i) in yCount" :key="y"
-          >x-data="{ open: false }" x-effect="console.log(open)"
+        <template x-for="(y, i) in yCount" :key="y">
           <div class="svg-row flex flex-row" :class="'row-'+i">
             <template x-for="(x, i) in xCount" :key="x">
               <div class="bg-icons-group mb-[36px] flex">
