--- a/src/_includes/partials/site-head.html
+++ b/src/_includes/partials/site-head.html
@@ -41,7 +41,7 @@ assign page_title = meta.title %} {% endif %}
 <link rel="preconnect" href="https://rsms.me" crossorigin />
 
 <!-- Preload the font stylesheet asynchronously with low priority -->
-<link rel="preload" href="https://rsms.me/inter/inter.css" as="style" />
+<link rel="preload" href="https://use.typekit.net/qfw3gzf.css" as="style" />
 
 <!-- https://www.filamentgroup.com/lab/load-css-simpler/ -->
 <link
